examples/test/testpolicy19322.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19322
  namespace: namespace205
spec:
  podSelector:
    matchLabels:
      key39: value4
      key11: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value34
          key41: value45
          key14: value12
      podSelector:
        matchLabels:
          key46: value5
          key49: value40
          key29: value6
